--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
         // Load saved notes when the page loads
         window.onload = function() {
             const characterIds = [
-                'ash', 'bayo', 'brawler', 'daisy', 'dark_samus', 'deku', 'donkey_kong', 'falco', 'fox', 'ganondorf',
+                'bayonetta', 'brawler', 'daisy', 'dark_samus', 'donkey_kong', 'falco', 'fox', 'ganondorf',
                 'game_and_watch', 'greninja', 'ike', 'incineroar', 'isabelle', 'jigglypuff', 'ken', 'kirby', 'link',
                 'little_mac', 'lucario', 'lucas', 'luigi', 'mario', 'marth', 'mega_man', 'meta_knight', 'mewtwo',
                 'miibrawler', 'miigunner', 'miiswordsman', 'minmin', 'mythra', 'ness', 'olimar', 'palutena', 'peach',
