--- a/index.html
+++ b/index.html
@@ -573,13 +573,24 @@
         // Load saved notes when the page loads
         window.onload = function() {
             const characterIds = [
-                'bayonetta', 'brawler', 'daisy', 'dark_samus', 'donkey_kong', 'falco', 'fox', 'ganondorf',
-                'game_and_watch', 'greninja', 'ike', 'incineroar', 'isabelle', 'jigglypuff', 'ken', 'kirby', 'link',
-                'little_mac', 'lucario', 'lucas', 'luigi', 'mario', 'marth', 'mega_man', 'meta_knight', 'mewtwo',
-                'miibrawler', 'miigunner', 'miiswordsman', 'minmin', 'mythra', 'ness', 'olimar', 'palutena', 'peach',
-                'pichu', 'pikachu', 'piranhaplant', 'pit', 'pitb', 'ptrainer', 'pyra', 'richter', 'ridley', 'robin', 
-                'rosalina', 'roy', 'ryu', 'samus', 'simon', 'snake', 'sora', 'toonlink', 'villager',
-                'wario', 'wii_fit_trainer', 'wolf', 'yoshi', 'zelda', 'zero_suit_samus'
+        'banjo', 'bayonetta', 'bowser', 'bowserjr', 'byleth',
+        'captainfalcon', 'charizard', 'chrom', 'cloud', 'corrin',
+        'daisy', 'dedede', 'diddykong', 'donkeykong', 'drmario',
+        'duckhunt', 'falco', 'fox', 'ganon', 'greninja', 
+        'hero', 'iceclimbers', 'ike', 'incineroar', 'inkling', 
+        'isabelee', 'ivysaur', 'jigglypuff', 'joker', 'kazuya', 
+        'ken', 'kirby', 'krool', 'link', 'littlemac', 
+        'lucario', 'lucas', 'lucina', 'luigi', 'mario', 
+        'marth', 'megaman', 'metaknight', 'mewtwo', 'miibrawler', 
+        'miigunner', 'miiswordsman', 'minmin', 'mythra', 'ness', 
+        'olimar', 'palutena', 'peach', 'pichu', 'pikachu', 
+        'piranhaplant', 'pit', 'pitb', 'ptrainer', 'pyra', 
+        'richter', 'ridley', 'robin', 'rosalina', 'roy', 
+        'ryu', 'samus', 'samusd', 'sephiroth', 'sheik', 
+        'shulk', 'simon', 'snake', 'sonic', 'sora', 
+        'squirtle', 'terry', 'toonlink', 'villager', 'wario', 
+        'wiifit', 'wolf', 'yoshi', 'younglink', 'zelda', 
+        'zerosuit'
             ];
 
             characterIds.forEach(id => {
