--- a/index.html
+++ b/index.html
@@ -8,75 +8,93 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
-            background-color: #f9f9f9; /* Light background color */
-            color: #333; /* Dark text color */
+            background-color: #f9f9f9;
+            color: #333;
+            display: flex; /* Use flexbox for layout */
+        }
+
+        .character-container {
+            flex: 1; /* Take up remaining space */
+            margin-right: 20px; /* Space between elements */
         }
 
         select {
             width: 200px;
             margin-bottom: 10px;
-            padding: 5px; /* Add padding for better appearance */
-            border: 1px solid #ccc; /* Light border */
-            border-radius: 4px; /* Rounded corners */
-            background-color: #fff; /* White background */
+            padding: 5px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            background-color: #fff;
+            display: flex; /* Flexbox for dropdown options */
+            align-items: center;
         }
 
-        .character-container {
-            margin: 20px 0;
-            padding: 10px; /* Add padding */
-            border: 1px solid #ddd; /* Light border around notes */
-            border-radius: 4px; /* Rounded corners */
-            background-color: #fff; /* White background */
+        .character-container img {
+            width: 100px;
+            height: auto;
+            margin-top: 10px;
         }
 
         textarea {
             width: 100%;
-            height: 100px;
+            height: 300px; /* Increased height for more notes space */
             margin-bottom: 10px;
-            border: 1px solid #ccc; /* Light border */
-            border-radius: 4px; /* Rounded corners */
-            padding: 10px; /* Add padding */
-            resize: none; /* Prevent resizing */
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            padding: 10px;
+            resize: none;
         }
 
         button {
-            padding: 10px 15px; /* Padding for buttons */
-            background-color: #007bff; /* Blue background */
-            color: white; /* White text */
-            border: none; /* No border */
-            border-radius: 4px; /* Rounded corners */
-            cursor: pointer; /* Pointer cursor on hover */
+            padding: 10px 15px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
         }
 
         button:hover {
-            background-color: #0056b3; /* Darker blue on hover */
+            background-color: #0056b3;
         }
 
         .saved-note {
             color: green;
-            font-weight: bold; /* Bold text */
+            font-weight: bold;
         }
 
-        /* New CSS for the stock icon */
         #icon {
-            width: 100px; /* Adjust size as needed */
+            display: none; /* Hide the large icon by default */
+        }
+
+        .character-select-wrapper {
+            position: relative; /* Relative positioning for icons */
+        }
+
+        .character-select-icon {
+            width: 20px; /* Small icon size */
             height: auto; /* Maintain aspect ratio */
-            margin-top: 10px; /* Space above the icon */
+            position: absolute; /* Position the icon next to the select */
+            left: 210px; /* Adjust position to be next to the select */
+            top: 5px; /* Center the icon vertically */
         }
     </style>
 </head>
 <body>
 
-    <h1>Smash Ultimate Character Notes</h1>
-
     <div class="character-container">
-        <label for="character-select">Select a character:</label>
-        <select id="character-select">
-            <option value="">--Select a character--</option>
-            <!-- Character options will be added by JavaScript -->
-        </select>
+        <h1>Smash Ultimate Character Notes</h1>
 
-        <img id="icon" src="" alt="Character Icon" style="display: none;"/> <!-- Placeholder for character icon -->
+        <div class="character-select-wrapper">
+            <label for="character-select">Select a character:</label>
+            <select id="character-select">
+                <option value="">--Select a character--</option>
+                <!-- Character options will be added by JavaScript -->
+            </select>
+            <img id="select-icon" class="character-select-icon" src="" alt="Character Icon" style="display: none;"/> <!-- Small icon next to dropdown -->
+        </div>
+
+        <img id="icon" src="" alt="Character Icon" /> <!-- Large character icon -->
 
         <textarea id="note" placeholder="Type your notes here..."></textarea>
         <button id="save-button">Save Note</button>
