--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
             margin: 20px;
             background-color: #f9f9f9;
             color: #333;
-            display: flex; /* Use flexbox for layout */
+            display: flex;
         }
 
         .character-container {
-            flex: 1; /* Take up remaining space */
-            margin-right: 20px; /* Space between elements */
+            flex: 1;
+            margin-right: 20px;
         }
 
         select {
@@ -25,19 +25,43 @@
             border: 1px solid #ccc;
             border-radius: 4px;
             background-color: #fff;
-            display: flex; /* Flexbox for dropdown options */
+            display: flex;
             align-items: center;
         }
 
-        .character-container img {
-            width: 100px;
+        .character-select-wrapper {
+            position: relative;
+        }
+
+        .character-select-icon {
+            width: 20px;
             height: auto;
+            position: absolute;
+            left: 210px;
+            top: 5px;
+        }
+
+        .input-container {
+            display: flex;
+            flex-direction: column;
             margin-top: 10px;
+        }
+
+        .input-label {
+            margin: 5px 0; /* Add margin for label spacing */
+        }
+
+        .colored-box {
+            width: 100%;
+            height: 50px; /* Height for the colored box */
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            margin-bottom: 10px; /* Space between boxes */
         }
 
         textarea {
             width: 100%;
-            height: 300px; /* Increased height for more notes space */
+            height: 400px; /* Increased height for more notes space */
             margin-bottom: 10px;
             border: 1px solid #ccc;
             border-radius: 4px;
@@ -66,18 +90,6 @@
         #icon {
             display: none; /* Hide the large icon by default */
         }
-
-        .character-select-wrapper {
-            position: relative; /* Relative positioning for icons */
-        }
-
-        .character-select-icon {
-            width: 20px; /* Small icon size */
-            height: auto; /* Maintain aspect ratio */
-            position: absolute; /* Position the icon next to the select */
-            left: 210px; /* Adjust position to be next to the select */
-            top: 5px; /* Center the icon vertically */
-        }
     </style>
 </head>
 <body>
@@ -95,6 +107,19 @@
         </div>
 
         <img id="icon" src="" alt="Character Icon" /> <!-- Large character icon -->
+
+        <!-- Added static areas for character stats -->
+        <div class="input-container">
+            <label class="input-label">Down throw ftilt %:</label>
+            <input type="text" id="down-throw-ftilt" class="colored-box" placeholder="Enter value..." />
+            <select id="box-color" class="colored-box">
+                <option value="white">Select color</option>
+                <option value="red">Red</option>
+                <option value="yellow">Yellow</option>
+                <option value="green">Green</option>
+                <option value="purple">Purple</option>
+            </select>
+        </div>
 
         <textarea id="note" placeholder="Type your notes here..."></textarea>
         <button id="save-button">Save Note</button>
