--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
-            background-color: #f9f9f9;
-            color: #333;
+            background-color: #2c2c2c; /* Dark background */
+            color: #f9f9f9; /* Light text color */
             display: flex;
         }
 
         .character-container {
             flex: 1;
             margin-right: 20px;
+            position: relative; /* To position the colored box */
         }
 
         select {
             width: 200px;
             margin-bottom: 10px;
             padding: 5px;
-            border: 1px solid #ccc;
+            border: 1px solid #444; /* Darker border */
             border-radius: 4px;
-            background-color: #fff;
-            display: flex;
-            align-items: center;
+            background-color: #444; /* Darker background */
+            color: #f9f9f9; /* Light text color */
         }
 
         .character-select-wrapper {
@@ -52,21 +52,24 @@
         }
 
         .colored-box {
-            width: 100%;
-            height: 50px; /* Height for the colored box */
-            border: 1px solid #ccc;
+            width: 50px; /* Smaller width for the colored box */
+            height: 30px; /* Smaller height for the colored box */
+            border: 1px solid #444; /* Darker border */
             border-radius: 4px;
             margin-bottom: 10px; /* Space between boxes */
+            cursor: pointer; /* Show pointer on hover */
         }
 
         textarea {
             width: 100%;
             height: 400px; /* Increased height for more notes space */
             margin-bottom: 10px;
-            border: 1px solid #ccc;
+            border: 1px solid #444; /* Darker border */
             border-radius: 4px;
             padding: 10px;
             resize: none;
+            background-color: #333; /* Darker background for textarea */
+            color: #f9f9f9; /* Light text color */
         }
 
         button {
@@ -83,7 +86,7 @@
         }
 
         .saved-note {
-            color: green;
+            color: lightgreen;
             font-weight: bold;
         }
 
@@ -111,14 +114,7 @@
         <!-- Added static areas for character stats -->
         <div class="input-container">
             <label class="input-label">Down throw ftilt %:</label>
-            <input type="text" id="down-throw-ftilt" class="colored-box" placeholder="Enter value..." />
-            <select id="box-color" class="colored-box">
-                <option value="white">Select color</option>
-                <option value="red">Red</option>
-                <option value="yellow">Yellow</option>
-                <option value="green">Green</option>
-                <option value="purple">Purple</option>
-            </select>
+            <div id="down-throw-ftilt" class="colored-box" contenteditable="true" placeholder="Enter value..." style="cursor: text;"></div>
         </div>
 
         <textarea id="note" placeholder="Type your notes here..."></textarea>
