--- a/index.html
+++ b/index.html
@@ -52,12 +52,15 @@
         }
 
         .colored-box {
-            width: 50px; /* Smaller width for the colored box */
-            height: 30px; /* Smaller height for the colored box */
+            width: 50%; /* Half the screen width */
+            height: 50px; /* Increased height for the colored box */
             border: 1px solid #444; /* Darker border */
             border-radius: 4px;
             margin-bottom: 10px; /* Space between boxes */
-            cursor: pointer; /* Show pointer on hover */
+            cursor: text; /* Show text cursor */
+            display: flex; /* Use flexbox for layout */
+            align-items: center; /* Center text vertically */
+            justify-content: center; /* Center text horizontally */
         }
 
         textarea {
